--- a/public/styles.css
+++ b/public/styles.css
@@ -2,3 +2,23 @@
     margin: 0;
     padding: 0;
 }
+main{
+    background-color: #333;
+}
+h1{
+    text-align: center;
+    font-size: large;
+}
+.letter-boxes{
+    display: flex;
+    justify-content: space-around;
+    margin: 50px;
+}
+.letter-boxes p{
+    border: 2px solid #666;
+    background-color: #444;
+    box-shadow: 5px #000;
+    padding: 25px;
+    border-radius: 5px;
+    color: #666;
+}
